--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "jest-environment-jsdom"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
