--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "start": "node src/index.js",
     "format": "prettier --write .",
-    "lint": "eslint . ",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint . --fix "
   },
   "jest": {
