--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,59 +5,37 @@ name: Node.js CI/CD
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: [ deploy-to-gh-pages ]
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: get code from repository
-      uses: actions/checkout@v3
-    - name: set up node environment
-      uses: actions/setup-node@v3
+    - name: checkout
+      uses: actions/checkout@4
+    - name: setup node
+      uses: actions/setup-node@4
       with:
-        node-version: 18
-    - name: install required dependencies
-      run: npm install
-
-    - name: run linter
-      run: npm run lint
-
-    - name: run test scripts
-      run: npm test
-
-    - name: build static files
+        node-version: 20
+    - name: install dependencies
+      run: npm ci
+    - name: build project
       run: npm run build
-
-    - name: upload static files as artifact
+    - name: upload artifacts
       uses: actions/upload-pages-artifact@v3
       with:
-        path: ./dist
-
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-       - name: Download static files artifact
-         uses: actions/download-artifact@v3
-         with:
-           path: ./dist
-
-       - name: Deploy to GitHub Pages
-         uses: peaceiris/actions-gh-pages@v3
-         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          publish_branch: gh-pages
+        name: 'github-pages'
+        path: build
+    - name: deploy to gh pages
+      uses: actions/deploy-pages@4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        artifact_name: 'github-pages'
     
   
