--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,23 +19,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@v3  # Correct version
+        uses: actions/checkout@v3
       - name: setup node
-        uses: actions/setup-node@v3  # Correct version
+        uses: actions/setup-node@v3
         with:
           node-version: 20
       - name: install dependencies
         run: npm ci
-      - name: build project
-        run: npm run build
+      - name: List project contents
+        run: ls -la
       - name: upload artifacts
-        uses: actions/upload-pages-artifact@v3  # Correct version
+        uses: actions/upload-pages-artifact@v3
         with:
           name: 'github-pages'
-          path: build
+          path: .
       - name: deploy to gh pages
-        uses: actions/deploy-pages@v2  # Correct version
+        uses: actions/deploy-pages@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           artifact_name: 'github-pages'
-  
