--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,9 @@ jobs:
           node-version: 20
       - name: install dependencies
         run: npm ci
-      - name: List project contents
+      - name: build project
+        run: npm run build
+      - name: List project contents after build
         run: ls -la
       - name: upload artifacts
         uses: actions/upload-pages-artifact@v3
