--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,43 +1,54 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI/CD
+name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: write
+    branches:
+      - main
 
 jobs:
-
-  build:
+  lint:
     runs-on: ubuntu-latest
+
     steps:
-    - name: get code from repository
-      uses: actions/checkout@v3
-    - name: set up node environment
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
-    - name: install required dependencies
-      run: npm install
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: run linter
-      run: npm run lint
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
 
-    - name: run test scripts
-      run: npm test
+      - name: Install dependencies
+        run: |
+          npm install
 
-    - name: build static files
-      run: npm run build
+      - name: Lint code
+        run: |
+          npm run lint
 
-    - name: upload static files as artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: ./dist
-    
-  
+  test:
+    runs-on: ubuntu-latest
+    needs: lint
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: |
+          npm install
+
+      - name: Run tests
+        run: |
+          npm test
